--- a/disney-clone/public/index.html
+++ b/disney-clone/public/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- ================================================================================= -->
+    <!-- Add this part of HTML code which makes the browser to not record the cache memory -->
+    <!-- ================================================================================= -->
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
+    <!-- ================================================== -->
+
     <meta
       name="description"
       content="Web site created using create-react-app"
